v2/crates/tui/tests/snapshots/snapshots__sidebar_empty.snap
---
source: crates/tui/tests/snapshots.rs
expression: rendered
---
┌ INBOX (0) ───────────────────────────┐
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
