v2/crates/tui/tests/snapshots/snapshots__sidebar_focused_3_sessions.snap
---
source: crates/tui/tests/snapshots.rs
expression: rendered
---
┌ INBOX (3) ───────────────────────────┐
│▸ task: o/r#1                         │
│  task: o/r#2                         │
│  task: o/r#3                         │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
