v2/crates/tui/tests/snapshots/snapshots__sidebar_unfocused_1_session.snap
---
source: crates/tui/tests/snapshots.rs
expression: rendered
---
┌ INBOX (1) ───────────────────────────┐
│▸ task: o/r#1                         │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
